--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    This is top secret message
+    <h1> Linux Is a Kernal Base Opertaing System...
+        </h1>
+    <p>
+        It is a free open source Opertaing System
+
+        some popular Linux Destros are:
+
+        Ubuntu
+        CentOS
+        Fedora
+        Kali
+        
+
+    </p>
 </body>
 </html>
